# oticon-audio-explorers-2024

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.devcontainer/: Dockerfile  config.fish  devcontainer.json  init.create.sh  init.start.sh
data/: .gitkeep
src/modelling/: enhance.py  evaluate.py  metrics.py  model.py  train.py
src/modelling/data/: data_module.py  dataset.py  generate_data.py
src/modelling/data/utils/: download_dns4data.bat  export_channels.py
src/modelling/utils/: export_mic_pos.py  mic_pos.npy
