[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "oticon-audio-explorers-2024"
version = "0.0.1"
description = "A short description of the repository."
authors = [
  { name = "Wavefront" },
]
readme = "README.md"
requires-python = "~=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["*.tests"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ['requirements.dev.txt'] }

[tool.ruff]
line-length = 120
